@@ -226,3 +226,4 @@ Revision	Version Updated		Log Message
 					All reforms set again.
 206		C++			Colonized provinces not required for cultural unions.
 207		C++			Cultures can be distinguished by province owner/country tag and religion.
+208		C++			Government type now influences political reforms.
